[package]
name = "duchamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
clap-v3 = "3.0.0-beta.1"
rand = { version = "0.8.5", features = ["rand_chacha"] }
